--- a/css/dress.css
+++ b/css/dress.css
@@ -1,5 +1,6 @@
 :root {
   --circle-size: 255px;
+  --ladies-image-size: 32.8%;
 }
 .dress__circles {
   margin-top: var(--main-little-margin);
@@ -29,10 +30,41 @@
   margin: 0 auto;
   border-collapse: separate;
   border-spacing: 25px;
+  display: flex;
+  justify-content: space-between;
+  max-height: 911px;
 }
-.dress__collage.little-mt img {
-  display: block;
+.dress__collage-little {
+  width: calc(55% - 11px);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 22px;
+}
+.dress__collage-little img {
+  width: calc(45% - 11px);
+  object-fit: cover;
+  height: calc(50% - 11px);
+}
+.dress__collage-little img:nth-child(2n + 1) {
+  width: calc(55% - 11px);
+}
+.dress__collage-big {
+  width: calc(45% - 11px);
+}
+.dress__collage-big img {
+  object-fit: cover;
   width: 100%;
-  height: 100%;
-  opacity: 0;
+}
+
+.dress-ladies-image {
+  height: 700px;
+  width: 32.8%;
+  object-fit: cover;
+}
+.check-block {
+  width: var(--ladies-image-size);
+}
+.check {
+  display: block;
+  margin: 0 auto;
 }
