--- a/css/fonts.css
+++ b/css/fonts.css
@@ -121,12 +121,12 @@
 /* PT Mono */
 @font-face {
   font-family: "PT Mono";
-  src: url("PTMono-Regular.eot");
+  src: url("../fonts/PTMono-Regular.eot");
   src: local("PT Mono"), local("PTMono-Regular"),
-    url("PTMono-Regular.eot?#iefix") format("embedded-opentype"),
-    url("PTMono-Regular.woff2") format("woff2"),
-    url("PTMono-Regular.woff") format("woff"),
-    url("PTMono-Regular.ttf") format("truetype");
+    url("../fonts/PTMono-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/PTMono-Regular.woff2") format("woff2"),
+    url("../fonts/PTMono-Regular.woff") format("woff"),
+    url("../fonts/PTMono-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
