--- a/css/map.css
+++ b/css/map.css
@@ -1,7 +1,10 @@
+:root {
+  --line-size: 158px;
+}
 .map iframe {
-  margin-top: var(--main-little-margin);
+  margin-top: calc(var(--main-little-margin) / 2);
   width: 100%;
-  height: 350px;
+  height: 579px;
 }
 .title-flex-block {
   display: flex;
@@ -9,13 +12,39 @@
   align-items: center;
   gap: 0 25px;
 }
+.map-image {
+  margin-top: var(--main-little-margin);
+  width: 100%;
+  height: 579px;
+  object-fit: cover;
+}
 .map .title-flex-block * {
   position: relative;
   margin: 0;
 }
 .map .title-flex-block .title-flex-block-line {
-  width: 158px;
+  width: var(--line-size);
   height: 1px;
   background: black;
   display: block;
+}
+@media (max-width: 1500px) {
+  :root {
+    --line-size: 100px;
+  }
+}
+@media (max-width: 1400px) {
+  :root {
+    --line-size: 60px;
+  }
+}
+@media (max-width: 1300px) {
+  :root {
+    --line-size: 20px;
+  }
+}
+@media (max-width: 1215px) {
+  :root {
+    --line-size: 0;
+  }
 }
