--- a/css/map.css
+++ b/css/map.css
@@ -28,6 +28,35 @@
   background: black;
   display: block;
 }
+.map-stop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #ffffff91;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: 700;
+}
+.map-stop.active {
+  animation: map-stop 0.8s forwards;
+}
+@keyframes map-stop {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    display: none;
+    opacity: 0;
+  }
+}
 @media (max-width: 1500px) {
   :root {
     --line-size: 100px;
@@ -46,5 +75,34 @@
 @media (max-width: 1215px) {
   :root {
     --line-size: 0;
+  }
+}
+@media (max-width: 1240px) {
+  .map-image,
+  .map iframe {
+    height: 350px;
+  }
+  .title-flex-block {
+    gap: 0 10px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .map .title-flex-block .title-flex-block-line {
+    width: 50px;
+  }
+  .map .title-flex-block .title-flex-block-line.second {
+    display: none;
+  }
+  .map .descr.descr-kazimir {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .title-flex-block {
+    justify-content: space-between;
+  }
+  .title-flex-block .descr.descr-kazimir {
+    font-family: "PT Mono";
+    margin-top: 16.5px;
   }
 }
