--- a/css/menu.css
+++ b/css/menu.css
@@ -25,3 +25,123 @@
   line-height: 103.1%; /* 24.744px */
   text-transform: lowercase;
 }
+.burger-checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+.burger {
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+}
+.burger::before,
+.burger::after {
+  content: "";
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 10px;
+  background: white;
+}
+.burger::before {
+  top: 0;
+  box-shadow: 0 11px 0 white;
+  transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+}
+.burger::after {
+  bottom: 0;
+  transition: bottom 0.3s 0.15s, transform 0.3s;
+}
+.burger.active::before {
+  box-shadow: 0 11px 0 #000;
+}
+.burger.active::before,
+.burger.active::after {
+  background: #000;
+}
+.burger-checkbox:checked + .burger::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+}
+.burger-checkbox:checked + .burger::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom 0.3s, transform 0.3s 0.15s;
+}
+.menu-list {
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: grid;
+  gap: 12px;
+  padding: 42px 0;
+  margin: 0;
+  background: orange;
+  list-style-type: none;
+  transform: translateX(-100%);
+  transition: 0.3s;
+  width: 200px;
+}
+.menu-item {
+  display: block;
+  padding: 8px;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+}
+.menu-item:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+.burger-checkbox:checked ~ .menu-list {
+  transform: translateX(0);
+}
+.burger-button {
+  display: none;
+}
+@media (max-width: 1300px) {
+  .menu.my-container {
+    width: 100dvw;
+    max-width: unset;
+    border-radius: 0;
+    height: 100dvh;
+    top: 0;
+    left: 0;
+    transform: unset;
+    flex-direction: column;
+    justify-content: unset;
+    align-items: flex-start;
+    padding: 8%;
+    background: #ffffffeb;
+    display: none;
+    opacity: 0;
+    transition: 0.3s all;
+  }
+  .menu.my-container.active {
+    display: flex;
+  }
+  .menu.my-container.active.visible {
+    opacity: 1;
+  }
+  .menu-block {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+  }
+  .burger-button {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    right: 5%;
+    top: 3%;
+  }
+}
