--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h5 {
 }
 .blue-heart {
   filter: invert(25%) sepia(6%) saturate(5196%) hue-rotate(118deg)
-    brightness(99%) contrast(84%);
+    brightness(99%) contrast(84%) !important;
 }
 body.hidden {
   overflow: hidden;
@@ -92,7 +92,7 @@ body.hidden {
 
     --descr-size: 13px;
     --descr-title-size: 16px;
-    --section-interval: 77px;
+    --section-interval: 60px;
     --main-little-margin: 24px;
   }
   .my-container.big-container {
