--- a/css/footer.css
+++ b/css/footer.css
@@ -52,7 +52,7 @@
     color: #1c1d19;
     text-align: center;
     font-family: PT Mono;
-    font-size: 10px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -67,6 +67,9 @@
   }
   .footer .title {
     font-size: 24px;
+  }
+  .footer-line {
+    display: none;
   }
 }
 @media (max-width: 540px) {
