--- a/css/menu.css
+++ b/css/menu.css
@@ -114,7 +114,7 @@
     width: 100dvw;
     max-width: unset;
     border-radius: 0;
-    height: 100dvh;
+    height: 100vh;
     top: 0;
     left: 0;
     transform: unset;
