--- a/css/dress.css
+++ b/css/dress.css
@@ -129,4 +129,12 @@
     width: 100%;
     height: 340px;
   }
+  :root {
+    --ladies-image-size: 48.5%;
+  }
+  .dress .descr.little-mt.text-center {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
