--- a/css/map.css
+++ b/css/map.css
@@ -109,4 +109,10 @@
   .map iframe {
     height: 300px;
   }
+  .map-stop {
+    text-align: center;
+  }
+  .map .title-flex-block .descr {
+    margin-top: 15px;
+  }
 }
