--- a/css/program.css
+++ b/css/program.css
@@ -42,6 +42,11 @@
   top: -100%;
   left: 50%;
   transform: translate(-50%, -100%);
+  opacity: 0;
+  transition: 1.5s all;
+}
+.aos-animate.program-block:nth-child(n + 2) .program-heart::before {
+  opacity: 1;
 }
 .program-day .descr {
   margin-top: 24px;
@@ -60,7 +65,7 @@
 }
 @media (max-width: 768px) {
   .program-heart {
-    margin: 0 40px;
+    margin: 0 25px;
   }
   .program-heart img {
     width: 10px;
@@ -99,6 +104,9 @@
     margin-top: 5px;
   }
   .program-block-text {
-    height: 105px;
+    height: 170px;
+  }
+  .program-block:nth-child(n + 2) .program-heart::before {
+    height: 135px;
   }
 }
