--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,11 @@ body.hidden {
     max-width: 90dvw;
   }
 }
+.fadein {
+  opacity: 0;
+}
+.default-link {
+  color: #1c1d19;
+  font-family: PT Mono;
+  text-decoration: unset;
+}
