--- a/css/program.css
+++ b/css/program.css
@@ -96,6 +96,7 @@
     margin-top: 22px;
     text-align: left !important;
     margin-left: 2.5%;
+    margin-right: 2.5%;
   }
   .program-block {
     align-items: flex-start;
