--- a/css/gForm.css
+++ b/css/gForm.css
@@ -2,7 +2,7 @@
 .mega-title .blue-text {
   color: #000;
   text-align: center;
-  font-family: NWT Bodoni;
+  font-family: "NWT Bodoni";
   font-size: 89px;
   font-style: italic;
   font-weight: 400;
@@ -105,7 +105,7 @@ span.from-heart-icon {
 
     text-align: center;
     /* мобилка_набор */
-    font-family: PT Mono;
+    /* font-family: PT Mono; */
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
