--- a/css/gForm.css
+++ b/css/gForm.css
@@ -2,7 +2,7 @@
 .mega-title .blue-text {
   color: #000;
   text-align: center;
-  font-family: "NWT Bodoni";
+  font-family: "NWT Bodoni" !important;
   font-size: 89px;
   font-style: italic;
   font-weight: 400;
@@ -14,6 +14,7 @@
 .mega-title .blue-text,
 .blue-text {
   color: #01d4c8;
+  font-family: "NWT Bodoni" !important;
 }
 .go-form {
   border-radius: 45px;
@@ -33,8 +34,9 @@
   text-decoration: unset;
   max-width: 95%;
 }
-span.from-heart-icon {
+.from-heart-icon {
   position: relative;
+  font-family: "NWT Bodoni" !important;
 }
 .from-heart-icon img.blue-heart {
   width: 20px;
