--- a/css/gForm.css
+++ b/css/gForm.css
@@ -2,7 +2,7 @@
 .mega-title .blue-text {
   color: #000;
   text-align: center;
-  font-family: "NWT Bodoni" !important;
+  font-family: "KAZIMIR" !important;
   font-size: 89px;
   font-style: italic;
   font-weight: 400;
@@ -14,7 +14,7 @@
 .mega-title .blue-text,
 .blue-text {
   color: #01d4c8;
-  font-family: "NWT Bodoni" !important;
+  font-family: "KAZIMIR" !important;
 }
 .go-form {
   border-radius: 45px;
