--- a/css/gForm.css
+++ b/css/gForm.css
@@ -1,8 +1,9 @@
 .mega-title,
-.mega-title .blue-text {
+.mega-title .blue-text,
+.mega-title * {
   color: #000;
   text-align: center;
-  font-family: "KAZIMIR" !important;
+  font-family: "NWT Bodoni" !important;
   font-size: 89px;
   font-style: italic;
   font-weight: 400;
@@ -14,7 +15,7 @@
 .mega-title .blue-text,
 .blue-text {
   color: #01d4c8;
-  font-family: "KAZIMIR" !important;
+  font-family: "NWT Bodoni" !important;
 }
 .go-form {
   border-radius: 45px;
