--- a/css/gForm.css
+++ b/css/gForm.css
@@ -101,6 +101,11 @@
     margin-top: 100px;
     font-size: 24px;
   }
+  .mega-title,
+  .mega-title .blue-text,
+  .mega-title * {
+    font-size: 24px;
+  }
   .go-form {
     border-radius: 45px;
     background: #8fece7;
