--- a/css/gForm.css
+++ b/css/gForm.css
@@ -43,9 +43,9 @@
   margin: 0;
   width: 20px;
   position: absolute;
-  top: 0;
+  top: -5px;
   transform: translateY(100%);
-  right: -30px;
+  right: -40px;
 }
 @media (max-width: 1650px) {
   .mega-title,
